<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@color/green_400"
    tools:context="com.odi.sol.dgame.ResultActivity">

    <TextView
        android:text="@string/result_maaf"
        android:layout_width="wrap_content"
        android:id="@+id/txtRes1"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="50sp" />
    <TextView
        android:text="@string/result_1_anda"
        android:layout_width="wrap_content"
        android:id="@+id/txtResNum1"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtRes1"
        android:textSize="30sp"/>
    <TextView
        android:text="@string/result_untukanda"
        android:layout_width="wrap_content"
        android:id="@+id/txtRes2"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtResNum1"
        android:textSize="50sp"/>
    <TextView
        android:text="@string/result_1_saya"
        android:layout_width="wrap_content"
        android:id="@+id/txtResNum2"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtRes2"
        android:textSize="30sp"/>
    <TextView
        android:text="@string/result_untuksaya"
        android:layout_width="wrap_content"
        android:id="@+id/txtRes3"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtResNum2"
        android:textSize="50sp" />

</RelativeLayout>
